--- a/dynamixel_workbench_controllers/config/joint_1_0.yaml
+++ b/dynamixel_workbench_controllers/config/joint_1_0.yaml
@@ -3,14 +3,14 @@
 # You are supposed to set at least Dynamixel ID
 # This example is compatible with Dynamixel using protocol 1.0
 pan:
-  ID: 1
+  ID: 14
   Return_Delay_Time: 0
   CW_Angle_Limit: 0
   CCW_Angle_Limit: 2048
   #Moving_Speed: 1023
-tilt:
-  ID: 2
-  Return_Delay_Time: 0
-  CW_Angle_Limit: 0
-  CCW_Angle_Limit: 2048
+  #tilt:
+  #ID: 2
+  #Return_Delay_Time: 0
+  #CW_Angle_Limit: 0
+  #CCW_Angle_Limit: 2048
   #Moving_Speed: 1023
